# devmaker

./: .gitignore  Cargo.toml  README.md  pkgr
.github/workflows/: CI.yml
src/: cli.rs  common.rs  config.rs  info.rs  jobs.rs  main.rs  vars.rs
