[package]
name = "devmaker"
version = "0.1.0"
authors = ["Wesley Van Melle <van.melle.wes@gmail.com>"]
edition = "2018"
description = "Apply startup scripts to a fresh VM"
license = "Unlicense"
repository = "https://www.github.com/scruffystuffs/devmaker"
readme = "README.md"
keywords = ["runner", "vm"]
categories = ["placeholder"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
console = "0.9.2"
derive-getters = "0.1.0"
dialoguer = "0.5.0"
dirs = "2.0"
env_logger = "0.7.1"
glob = "0.3.0"
is_executable = "0.1.2"
log = "0.4.8"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.11"
tempdir = "0.3.7"
whoami = "0.8.1"